Add tune_count parameter to audit_log query
   fixes #19209
